--- a/src/main/resources/templates/admin/reservation_modefy.html
+++ b/src/main/resources/templates/admin/reservation_modefy.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>预定订单修改</title>
 </head>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/holder.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -14,9 +13,9 @@
 <body>
 
 <!-- Modal -->
+<div th:insert="admin/navigate::nav"></div>
 
 <div class="modal-header">
-    <button class="close" data-dismiss="modal">&times;</button>
     <h4>预定客户信息修改</h4>
 </div>
 <div class="container-fluid">
